minor updates to search-bar

--- a/src/Components/SearchBar/search-bar.scss
+++ b/src/Components/SearchBar/search-bar.scss
@@ -40,8 +40,8 @@
   display: block;
   list-style-type: none;
   width: 100%;
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
+  border-left: 2px solid;
+  border-right: 2px solid;
   background-color: white;
   z-index: 999;
 
