--- a/src/Pages/LoginPage/login.scss
+++ b/src/Pages/LoginPage/login.scss
@@ -1,9 +1,4 @@
-.login-register-page {
-  margin: 0 auto;
-  width: 20rem;
-}
-
-.login-or-register {
+.login-page__switch {
   display: flex;
   align-items: baseline;
   margin: 1rem 0;
