--- a/src/Components/Indicator/indicators.scss
+++ b/src/Components/Indicator/indicators.scss
@@ -26,15 +26,15 @@
 
 .status-text {
 
-  &.status-0 {
+  &.status-text--0 {
     color: var(--color-status-positive);
   }
 
-  &.status-1 {
+  &.status-text--1 {
     color: var(--color-status-negative);
   }
 
-  &.status-2 {
+  &.status-text--2 {
     color: var(--color-status-warning);
   }
 
