--- a/src/Components/Pagination/pagination.scss
+++ b/src/Components/Pagination/pagination.scss
@@ -1,10 +1,11 @@
+
 .pagination {
   margin: 2rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  .prev, .next {
+  .pagination__prev, .pagination__next {
     margin: 0 2rem;
     padding: 5px;
 
@@ -14,7 +15,7 @@
 
   }
 
-  .current {
+  .pagination__current {
 
   }
 }
