--- a/src/Components/ProductGrid/product-grid.scss
+++ b/src/Components/ProductGrid/product-grid.scss
@@ -14,7 +14,6 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-
 }
 
 .product-tile {
@@ -25,43 +24,42 @@
   border: 1px solid var(--border-color);
   border-bottom: 0;
 
-  .image-wrapper {
+  .product-tile__image {
     position: relative;
     padding: 42.25% 0 0 0;
+
+    img {
+      position: absolute;
+      display: block;
+      max-width: 100%;
+      max-height: 66%;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+    }
   }
 
-  img {
-    position: absolute;
-    display: block;
-    max-width: 100%;
-    max-height: 66%;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  }
-
-  .product-title {
+  .product-tile__title {
     overflow: hidden;
     height: 2.4em;
   }
 
-  .product-info {
+  .product-tile__info {
     display: flex;
     align-items: baseline;
 
-    .availability {
+    .product-tile__availability {
       flex: 1;
     }
 
-    .price {
+    .product-tile__price {
       flex: 1;
       text-align: right;
       font-weight: 700;
       font-size: 1.2rem;
     }
-
   }
 
 }
