--- a/src/Pages/ProductPage/product-page.scss
+++ b/src/Pages/ProductPage/product-page.scss
@@ -1,7 +1,8 @@
 
-.product-container {
+.product-page {
+  width: 100%;
 
-  .product-head {
+  .product-page__head {
     margin: 2rem 0;
     display: flex;
     align-items: center;
@@ -11,67 +12,33 @@
       display: inline-block;
       max-width: 10rem;
     }
-  }
 
+    .price {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
 
-
-  .product {
-    width: 100%;
-  }
-
-  .attribute-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .attribute {
-    flex: 1;
-    flex-basis: 50%;
-    min-width: 12rem;
-    padding: 0.5rem;
-    line-height: 1.5rem;
-    border-bottom: 1px solid var(--border-color);
-
-    b {
-      display: block;
+    .add-to-cart {
+      display: inline-block;
+      padding-left: 2rem;
     }
   }
 
-  .price {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-  }
+  .product-page__description .attribute-list {
+    display: flex;
+    flex-wrap: wrap;
 
-  .add-to-cart {
-    display: inline-block;
-    padding-left: 2rem;
+    .attribute {
+      flex: 1;
+      flex-basis: 50%;
+      min-width: 12rem;
+      padding: 0.5rem;
+      line-height: 1.5rem;
+      border-bottom: 1px solid var(--border-color);
 
-    button {
-      display: inline-flex;
-      align-items: center;
-      border: 1px solid rgba(0, 0, 0, 0.4);
-      cursor: pointer;
-      border-radius: 3px;
-      margin-bottom: 0.5rem;
-
-      .cart-text {
-        padding: 5px;
-        color: var(--color-main)
-      }
-
-      .cart-icon {
-        margin-right: 5px;
-        width: 1.5rem;
-      }
-
-      &:hover {
-        background-color: var(--color-positive);
-        border-color: var(--color-main);
-
-        .cart-text, .cart-icon {
-          color: white;
-        }
+      b {
+        display: block;
       }
     }
   }
